[package]
name = "tokio-nsq"
version = "0.14.0"
authors = ["Harpo Roeder <roedeharpo@protonmail.ch>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/harporoeder/tokio-nsq"
description = "A Rust NSQ client built on Tokio. Tokio NSQ aims to be a feature complete NSQ client implementation."
readme = "README.md"
categories = ["asynchronous", "network-programming", "concurrency"]

[dependencies]
hyper = { version = "1.0", features = ["client", "http1"], default-features = false }
hyper-util = { version = "0.1", features = [ "client", "client-legacy", "http1" ], default-features = false }
http-body-util = { version = "0.1", default-features = false }
bytes = { version = "1.0", default-features = false }
tokio = { version = "1.0", features = ["full"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = ["std"], default-features = false }
byteorder = { version = "1.3", default-features = false }
anyhow = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
rustls = { version = "0.23", default-features = false }
regex = { version = "1", default-features = false }
lazy_static = { version = "1.4", default-features = false }
backoff = { version = "0.4", default-features = false }
gethostname = { version = "0.5", default-features = false }
snap = { version = "1", default-features = false }
matches = { version = "0.1.8", default-features = false }
async-compression = { version = "0.4", features = ["tokio", "deflate"], default-features = false }
tokio-io-timeout = { version = "1.1", default-features = false }
futures-util = { version = "0.3", default-features = false }
futures = { version = "0.3", default-features = false }

[dev-dependencies]
rand = { version = "0.8", default-features = false }
env_logger = { version = "0.11", default-features = false }

[build-dependencies]
built = { version = "0.7", default-features = false }
